# Object-Pool

./: CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
include/pool/: objectPool.hpp
tests/: CMakeLists.txt
